--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,7 +76,7 @@ jobs:
 
             *Branch:* `${{ github.ref_name }}`
             *Commit:* [${{ github.sha }}](${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }})
-            *Project:* [`${{ github.repository }}`](${{ github.repository }})
+            *Project:* [${{ github.repository }}](${{ github.repository }})
             *Actor:* `${{ github.actor }}`
             *Commit:* `${{ github.event.head_commit.message }}`
           format: markdown
