update TG notification for filure job

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,7 +98,7 @@ jobs:
 
             *Branch:* `${{ github.ref_name }}`
             *Commit:* [${{ github.sha }}](${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }})
-            *Project:* `[${{ github.repository }}](${{ github.repository }})`
+            *Project:* [${{ github.repository }}](${{ github.repository }})
             *Actor:* `${{ github.actor }}`
 
             *Workflow log:*
