--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
+---
 title: B4DCAT
 description: B4DCAT
-theme: minima # Можешь выбрать другую тему или создать свою
-# baseurl: "/repository-name" # Раскомментируй и укажи имя репозитория, если это не your-username.github.io
-# url: "https://your-username.github.io" # Раскомментируй и укажи свой URL
+theme: minima
 collections:
-  tasks:            # Имя коллекции
+  tasks:
     output: true
     permalink: /tasks/:title/
 author: Mr Vi
 github:
   repository_url: https://github.com/mrvi0/mrvi0.github.io
-  commit_message: "Update task" 
+  commit_message: Update task
   source:
     branch: main
 repository: mrvi0/mrvi0.github.io
+telegram: "[B4DCAT](https://t.me/B4DCAT) \\| [B4DCAT HUB](https://t.me/B4DCAT_HUB)"
