--- a/manifest.json
+++ b/manifest.json
@@ -1,76 +1,46 @@
 {
-  "name": "B4DCAT - Персональный Хаб",
-  "short_name": "B4DCAT",
-  "description": "Персональный хаб с утилитами, вики, трекером задач и проектами",
+  "name": "Mr Vi - Personal Hub",
+  "short_name": "Mr Vi",
+  "description": "Персональный хаб Mr Vi",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#000000",
-  "theme_color": "#000000",
+  "theme_color": "#00ff00",
   "orientation": "portrait-primary",
   "scope": "/",
   "lang": "ru",
+  "categories": ["personal", "developer"],
   "icons": [
+    {
+      "src": "/assets/img/favicon-16x16.png",
+      "sizes": "16x16",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/img/favicon-32x32.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    },
     {
       "src": "/assets/img/favicon-192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "/assets/img/favicon-512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ],
-  "categories": ["productivity", "utilities", "education"],
-  "screenshots": [
-    {
-      "src": "/assets/img/screenshot-desktop.png",
-      "sizes": "1280x720",
-      "type": "image/png",
-      "form_factor": "wide"
-    },
-    {
-      "src": "/assets/img/screenshot-mobile.png",
-      "sizes": "390x844",
-      "type": "image/png",
-      "form_factor": "narrow"
+      "type": "image/png"
     }
   ],
   "shortcuts": [
     {
-      "name": "Утилиты",
-      "short_name": "Утилиты",
-      "description": "Быстрый доступ к утилитам",
-      "url": "/utilities",
+      "name": "GitHub",
+      "short_name": "GitHub",
+      "description": "Открыть GitHub профиль",
+      "url": "https://github.com/mrvi0",
       "icons": [
         {
-          "src": "/assets/img/icon-utilities.png",
-          "sizes": "96x96"
-        }
-      ]
-    },
-    {
-      "name": "Вики",
-      "short_name": "Вики",
-      "description": "Персональная вики",
-      "url": "/wiki",
-      "icons": [
-        {
-          "src": "/assets/img/icon-wiki.png",
-          "sizes": "96x96"
-        }
-      ]
-    },
-    {
-      "name": "Задачи",
-      "short_name": "Задачи",
-      "description": "Трекер задач",
-      "url": "/tasks",
-      "icons": [
-        {
-          "src": "/assets/img/icon-tasks.png",
+          "src": "/assets/img/github-icon.png",
           "sizes": "96x96"
         }
       ]
