--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,31 @@
-.excalidraw
-Gemfile.lock
+# Jekyll
 _site/
+.sass-cache/
+.jekyll-cache/
+.jekyll-metadata
+
+# Bundler
+Gemfile.lock
+vendor/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Logs
+*.log
+npm-debug.log*
+
+# Temporary files
 temp/
+*.tmp
 0
+
+# Excalidraw
+.excalidraw
