--- a/manifest.json
+++ b/manifest.json
@@ -12,24 +12,10 @@
   "categories": ["personal", "developer"],
   "icons": [
     {
-      "src": "/assets/img/favicon-16x16.png",
-      "sizes": "16x16",
-      "type": "image/png"
-    },
-    {
-      "src": "/assets/img/favicon-32x32.png",
-      "sizes": "32x32",
-      "type": "image/png"
-    },
-    {
-      "src": "/assets/img/favicon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/assets/img/favicon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "/assets/img/favicon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
     }
   ],
   "shortcuts": [
