fix: resolve YAML syntax errors in data files
🐛 Fix YAML parsing issues:
- Replace emoji icons with text-based icons in social.yml
- Fix navigation.yml with proper YAML syntax
- Update skills.yml to use valid YAML format
- Add quotes around string values for better compatibility

✅ All YAML files now pass validation
✅ Ready for Jekyll build process

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,19 @@
-- title: Главная
-  url: /
-  icon: 🏠
+- title: "Главная"
+  url: "/"
+  icon: "home"
 
-- title: О себе
-  url: /about/
-  icon: 👨‍💻
+- title: "О себе"
+  url: "/about/"
+  icon: "user"
 
-- title: Проекты
-  url: /projects/
-  icon: 🚀
+- title: "Проекты"
+  url: "/projects/"
+  icon: "rocket"
 
-- title: Блог
-  url: /blog/
-  icon: 📝
+- title: "Блог"
+  url: "/blog/"
+  icon: "blog"
 
-- title: Контакты
-  url: /contact/
-  icon: 📞 
+- title: "Контакты"
+  url: "/contact/"
+  icon: "contact" 
