fix: resolve 404 errors for pages
🔧 Fix page routing issues:
- Add pages collection to _config.yml
- Create page files in root directory for GitHub Pages compatibility
- Update all navigation links to use .html extensions
- Fix 404 page links to match new structure

✅ Pages should now be accessible:
- /about.html
- /projects.html
- /blog.html
- /contact.html

🐛 Resolves GitHub Pages 404 errors

--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,9 @@ collections:
   posts:
     output: true
     permalink: /:collection/:title/
+  pages:
+    output: true
+    permalink: /:title/
 
 # Defaults
 defaults:
