fix: restore pages functionality
🔧 Restore proper Jekyll pages structure:
- Add back pages collection to _config.yml
- Restore defaults for pages layout
- Move page files back to _pages/ directory
- Update all navigation links to use /page/ format

✅ Pages should now work correctly:
- /about/
- /projects/
- /blog/
- /contact/

🐛 Fixes broken page routing after previous cleanup

--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,9 @@ collections:
   posts:
     output: true
     permalink: /:collection/:title/
+  pages:
+    output: true
+    permalink: /:title/
 
 # Defaults
 defaults:
@@ -26,6 +29,11 @@ defaults:
       type: "posts"
     values:
       layout: "post"
+  - scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "default"
 
 # Plugins
 plugins:
@@ -60,6 +68,7 @@ exclude:
 
 # Include files
 include:
+  - _pages
   - _posts
   - _layouts
   - _includes
