feat: add skills page with progress bars
- Create new skills page with visual progress bars
- Add skills to navigation menu
- Display skill levels from _data/skills.yml
- Add professional skill visualization

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,10 @@
   url: "/about/"
   icon: "user"
 
+- title: "Навыки"
+  url: "/skills/"
+  icon: "skills"
+
 - title: "Проекты"
   url: "/projects/"
   icon: "rocket"
